# k8s-vgpu-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  build.sh  dockerfile  readme.md  readme_zh.md  vgpu_monitor.cpp
kubernetes/: vgpu_monitor.yml
